# pip-licenses-lib

./: .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  zizmor.yml
docs/: api.rst  conf.py  index.rst
piplicenses_lib/: __init__.py
stubs/: boolean.pyi  license_expression.pyi
tests/: test_piplicenses_lib.py
